{
    "name": "InputControls",
    "maps": [
        {
            "name": "Controls",
            "id": "38790cb6-5a92-4d7e-bbfc-3e6494dcabc8",
            "actions": [
                {
                    "name": "LeftHand",
                    "type": "Button",
                    "id": "71c090a4-f3a7-40f2-bb20-9560afe1ca39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RightHand",
                    "type": "Button",
                    "id": "823334a1-2fb2-411c-8578-002bb43b96b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f5beab4c-6334-4b5a-97b7-6ca2d2206084",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0eb6ae02-1642-46f6-be87-c96e9a2295c0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}